# pubmed_fetcher

./: README.md  pyproject.toml  results.csv
.mypy_cache/: .gitignore
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  (+186 more)
.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.13/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  constants.data.json  constants.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  proactor_events.data.json  (+29 more)
pubmed_fetcher/: cli.py  fetcher.py
(+1137 files in other folders)
