[tool.poetry]
name = "pubmed_fetcher"   # This can have a dash
version = "0.1.0"
description = ""
authors = ["jk"]
readme = "README.md"
packages = [{ include = "pubmed_fetcher" }]  # MATCHES your folder name!

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "^2.32.4"
pandas = "^2.3.1"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"
pandas-stubs = "^2.3.0.250703"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
